# globe-of-ukraine-humankind-map-builder

./: .gitignore  CLAUDE.md  IMPROVEMENTS.md  PLAN.md  README.md  config.yaml  feature_mapper.py  geo_hex_mapper.py  hex_elevation_mapper.py  hex_grid.py  hex_mapping_research.md  incremental_map_builder.py  natural_wonder_mapper.py  parse_and_render_all_maps.py  pyproject.toml  river_mapper.py  terrain_mapper.py
data/: humankind_ukraine_terrain_modifiers.md  ukraine_adm2.json
data/administrative_regions_2020/: check_ukraine_data.py  metadata-cod-ab-ukr.json
data_fetchers/: __init__.py  landcover_fetcher.py  landcover_fetcher_copernicus.py  srtm_elevation.py
docs/: HUMANKIND_MAP_FORMAT.md  ISSUES.md  VALIDATION_ERRORS.md
humankind_maps/133512126264917600_3721450-ol67/: South-East Europe.hmap
humankind_maps/arthurleo_huge_earth_contest/: Descriptor.hmd  Save.hms
humankind_maps/europe_1.2/: Europe 1.2.hmap
humankind_maps/tiny_australia/: Descriptor.hmd  Save.hms  The_Amplipodes.hmap
humankind_maps/tiny_map/: Descriptor.hmd  Save.hms  Tiny.hmap
tests/: __init__.py  test_config.py  test_copernicus_landcover.py  test_phase1_ukraine_map.py  test_phase2_geo_hex.py  test_phase2_hex_grid.py  test_phase3_ukraine_data.py
utils/: __init__.py  biome_mapper.py  calculate_bounds.py  calculate_optimal_bounds.py  config_loader.py  geo_hex_mapper.py  heightmap_generator.py  humankind_map_parser.py  humankind_map_renderer.py  main.py  map_validator.py  render_hex_map.py  render_map.py  run_phase4.py  territory_assigner.py  ukraine_map_generator.py
(+17 files in other folders)
